--- a/src/css/Sidebar.css
+++ b/src/css/Sidebar.css
@@ -35,3 +35,37 @@
     height: 35px;
     width: 35px;
 }
+
+.sidebar_search {
+    display: flex;
+    align-items: center;
+    background-color: #f6f6f6;
+    height: 39px;
+    padding: 10px;
+}
+
+.sidebar_searchContainer {
+    display: flex;
+    align-items: center;
+    background-color: white;
+    width: 100%;
+    height: 35px;
+    border-radius: 20px;
+}
+
+.searchIcon  {
+    color: grey;
+    padding: 10px;
+}
+
+.sidebar_searchContainer > input {
+    border: none;
+    outline-width: 0;
+    margin-left: 10px;
+}
+
+.sidebar_chats {
+    flex: 1;
+    background-color: white;
+    overflow: scroll;
+}
