--- a/src/css/Chat.css
+++ b/src/css/Chat.css
@@ -34,3 +34,58 @@
     overflow: scroll;
 }
 
+.chat_message {
+    position: relative;
+    font-size: 16px;
+    padding: 10px;
+    width: fit-content;
+    border-radius: 10px;
+    background-color: #fff;
+    margin-bottom: 30px;
+}
+
+.chat_receiver {
+    margin-left: auto;
+    background-color: #dcf8c6;
+}
+
+.chat_timestamp {
+    margin-left: 10px;
+    font-size: xx-small;
+}
+
+.chat_name {
+    position: absolute;
+    top: -15px;
+    font-weight: 800;
+    font-size: xx-small;
+}
+
+.chat_footer {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    height: 62px;
+    border-top: 1px solid lightgray;
+}
+
+.chat_footer > form {
+    flex: 1;
+    display: flex;
+}
+
+.chat_footer > form > input {
+    flex: 1;
+    border-radius: 30px;
+    padding: 10px;
+    border: none;
+}
+
+.chat_footer > form > button {
+    display: none;
+}
+
+.footerIcons {
+    padding: 10px;
+    color: gray;
+}
